# optimization-compass

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_SOURCE_AUDIT.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  failure-contract.patch  pull_request_template.md
data/: README.md  build-manifest.json  optimization_method_selection_database_v0.10.0.sqlite  optimization_method_selection_database_v0.10.0.xlsx  optimization_method_selection_database_v0.10.0_manifest.json  optimization_method_selection_database_v0.10.0_report.md  optimization_method_selection_database_v0.11.0.xlsx  optimization_method_selection_database_v0.11.0_manifest.json  optimization_method_selection_database_v0.11.0_release.json  optimization_method_selection_database_v0.11.0_report.md  optimization_method_selection_database_v0.11.0_schema.sql  optimization_method_selection_database_v0.12.0.sqlite  optimization_method_selection_database_v0.12.0.xlsx  optimization_method_selection_database_v0.12.0_manifest.json  optimization_method_selection_database_v0.12.0_report.md  optimization_method_selection_database_v0.13.0_manifest.json  optimization_method_selection_database_v0.13.0_release.json  optimization_method_selection_database_v0.13.0_report.md  optimization_method_selection_database_v0.14.0_manifest.json  optimization_method_selection_database_v0.14.0_release.json  optimization_method_selection_database_v0.14.0_report.md  optimization_method_selection_database_v0.15.0_manifest.json  optimization_method_selection_database_v0.15.0_release.json  optimization_method_selection_database_v0.15.0_report.md  optimization_method_selection_database_v0.15.1_manifest.json  optimization_method_selection_database_v0.15.1_release.json  optimization_method_selection_database_v0.15.1_report.md  optimization_method_selection_database_v0.16.0_manifest.json  optimization_method_selection_database_v0.16.0_release.json  optimization_method_selection_database_v0.16.0_report.md  optimization_method_selection_database_v0.17.0_manifest.json  optimization_method_selection_database_v0.17.0_release.json  optimization_method_selection_database_v0.17.0_report.md  optimization_method_selection_database_v0.18.0_manifest.json  optimization_method_selection_database_v0.18.0_release.json  optimization_method_selection_database_v0.18.0_report.md  optimization_method_selection_database_v0.18.0_schema.sql  optimization_method_selection_database_v0.18.10_manifest.json  optimization_method_selection_database_v0.18.10_release.json  optimization_method_selection_database_v0.18.10_report.md  (+82 more)
docs/: adding-knowledge.md  architecture.md  atlas-state-url-contract.md  bayesian-optimization-theater.md  conditional-priority-audit.md  content-authoring.md  content-quality-report.md  content-reading-principles.md  content-visual-language.md  coverage-policy.md  data-maintenance.md  dataset-card.md  default-method-audit.md  dependency-maintenance.md  derived-media.md  external-video-publishing.md  licensing.md  (+27 more)
(+1327 files in other folders)
