[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "optimization-compass"
version = "0.1.0"
description = "Traceable optimization-method guidance backed by a structured SQLite knowledge base"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "TAKUYA OTANI" }]
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<3",
  "pytest>=8.3,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.8,<1",
]

[project.scripts]
optimization-compass = "optimization_compass.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/optimization_compass"]

[tool.hatch.build]
include = [
  "src/optimization_compass/**/*.py",
  "src/optimization_compass/resources/*.sqlite",
  "src/optimization_compass/resources/DATASET_VERSION",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["optimization_compass"]
warn_unused_ignores = true
