[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[project]
name = "optimization-compass"
version = "0.1.0"
description = "Traceable optimization-method guidance backed by a structured SQLite knowledge base"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "TAKUYA OTANI" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "fastapi>=0.115,<1",
  "latex2mathml>=3.78,<4",
  "markdown-it-py>=4,<5",
  "mdit-py-plugins>=0.5,<1",
  "openpyxl>=3.1,<4",
  "pygments>=2.19,<3",
  "pydantic>=2.8,<3",
  "pyyaml>=6,<7",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.51.0,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<3",
  "pip-audit>=2.9,<3",
  "pytest>=8.3,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.8,<1",
  "types-pygments>=2.19,<3",
  "types-pyyaml>=6,<7",
]

[project.scripts]
optimization-compass = "optimization_compass.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/optimization_compass"]

[tool.hatch.build]
include = [
  "src/optimization_compass/**/*.py",
  "src/optimization_compass/resources/*.sqlite",
  "src/optimization_compass/resources/DATASET_VERSION",
  "src/optimization_compass/resources/release-authority.json",
  "src/optimization_compass/resources/problem-suite.json",
  "src/optimization_compass/resources/derived_media/*",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["optimization_compass"]
warn_unused_ignores = true

[dependency-groups]
dev = [
    "types-openpyxl>=3.1,<4",
]
